added a test_api endpoint, sessions

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
   <header>
+    <h1>Logo Here</h1>
   </header>
 
   <div id="main">
@@ -23,7 +24,6 @@
   </footer>
 
   <!-- JavaScript at the bottom for fast page loading -->
-
   <!-- Grab Google CDN's jQuery, with a protocol relative URL -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
   </script>
