Updated server and template for Foursquare

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,8 @@
 
   <div id="main">
     Hello world
+    <a href="https://foursquare.com/oauth2/authenticate?client_id=IGHYIIQIRRVUGIMJ05XGMGXIGH25WVZ5CLFM53C5BXXQXHTN&response_type=code&{{ FS_REDIRECT_URI }}">Sign in with Foursquare to list locations near NyanCat!</a>
+
   </div>
 
   <footer>
