--- a/templates/index.html
+++ b/templates/index.html
@@ -1,35 +1,34 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
+  <head>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 
-  <title>Title</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width">
+    <link href="../static/js/jquery/jquery-ui-1.8.18.custom.css" type="text/css" rel="stylesheet"/>
+    <script src="../static/js/jquery/jquery-1.7.1.min.js"></script>
+    <script src="../static/js/jquery/jquery-ui-1.8.18.custom.min.js"></script>
 
-  <link rel="stylesheet" href="/static/css/style.css">
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDVlmhMFLkex9hygFh8POvX7JwUAvdyX9s&sensor=true"></script>
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=true"></script>
 
-  <script src="js/libs/modernizr-2.5.3.min.js"></script>
-</head>
-<body>
-  <header>
-    <h1>Logo Here</h1>
-  </header>
 
-  <div id="main">
-    Hello world
-    <a href="https://foursquare.com/oauth2/authenticate?client_id=IGHYIIQIRRVUGIMJ05XGMGXIGH25WVZ5CLFM53C5BXXQXHTN&response_type=code&{{ FS_REDIRECT_URI }}">Sign in with Foursquare to list locations near NyanCat!</a>
+    <link href="../static/nyanmap.css" type="text/css" rel="stylesheet" />
+    <script src="../static/js/api.js"></script>
+    <script src="../static/js/nyanmap.js"></script>
 
-  </div>
+    
+  </head>
+  <body onload="initialize(50,50)">
+   <div id="top_bar">
+     <img id="hacknyancat" src="../static/hacknyancat_logo.png" width="102" height="35"/>
+     <a href="https://foursquare.com/oauth2/authenticate?client_id=IGHYIIQIRRVUGIMJ05XGMGXIGH25WVZ5CLFM53C5BXXQXHTN&response_type=code&{{ FS_REDIRECT_URI }}">Sign in with Foursquare to list locations near NyanCat!</a>
+   </div>
+   <div id="nyancat">
+      <img src="nyancat.gif" alt="nyancat" width="100" height="70" />
+    </div>
 
-  <footer>
-  </footer>
-
-  <!-- JavaScript at the bottom for fast page loading -->
-  <!-- Grab Google CDN's jQuery, with a protocol relative URL -->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
-  </script>
-
-  <script src="js/script.js"></script>
-</body>
+    <div id="map_canvas" style="width:100%; height:100%">
+<!--      <div id="nyancat"><img src="nyancat.gif" alt="nyancat" /></div>-->
+    </div>
+  </body>
+ 
 </html>
