--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
      <a href="https://foursquare.com/oauth2/authenticate?client_id=IGHYIIQIRRVUGIMJ05XGMGXIGH25WVZ5CLFM53C5BXXQXHTN&response_type=code&{{ FS_REDIRECT_URI }}">Sign in with Foursquare to list locations near NyanCat!</a>
    </div>
    <div id="nyancat">
-      <img src="nyancat.gif" alt="nyancat" width="100" height="70" />
+      <img src="../static/nyancat.gif" alt="nyancat" width="100" height="70" />
     </div>
 
     <div id="map_canvas" style="width:100%; height:100%">
