--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
 
     
   </head>
-  <body onload="initialize(50,50)">
+  <body onload="initialize(40.728429,-73.995605)">
    <div id="top_bar">
      <img id="hacknyancat" src="../static/hacknyancat_logo.png" width="102" height="35"/>
      <a href="https://foursquare.com/oauth2/authenticate?client_id=IGHYIIQIRRVUGIMJ05XGMGXIGH25WVZ5CLFM53C5BXXQXHTN&response_type=code&{{ FS_REDIRECT_URI }}">Sign in with Foursquare to list locations near NyanCat!</a>
