--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,8 @@
    <div id="top_bar">
      <img id="hacknyancat" src="../static/hacknyancat_logo.png" width="102" height="35"/>
      <a href="https://foursquare.com/oauth2/authenticate?client_id=IGHYIIQIRRVUGIMJ05XGMGXIGH25WVZ5CLFM53C5BXXQXHTN&response_type=code&{{ FS_REDIRECT_URI }}">Sign in with Foursquare to list locations near NyanCat!</a>
+     <a href="etsy-results/">Nyancat on Etsy!</a>
+     <a href="dc-results/">Nearby Donors Choose Projects!</a>
    </div>
    <div id="nyancat">
       <img src="../static/nyancat.gif" alt="nyancat" width="100" height="70" />
