--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,8 @@
      <a href="https://foursquare.com/oauth2/authenticate?client_id=IGHYIIQIRRVUGIMJ05XGMGXIGH25WVZ5CLFM53C5BXXQXHTN&response_type=code&{{ FS_REDIRECT_URI }}">Sign in with Foursquare to list locations near NyanCat!</a>
      <a href="etsy-results/">Nyancat on Etsy!</a>
      <a href="dc-results/">Nearby Donors Choose Projects!</a>
+     <a href="nyt/">Nyancat in the news!</a>
+     <a href="static/longtail.html">Watch Nyancat with Longtail's JWPlayer</a>
    </div>
    <div id="nyancat">
       <img src="../static/nyancat.gif" alt="nyancat" width="100" height="70" />
