makes it work maybe

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,6 +33,10 @@
     <div id="map_canvas" style="width:100%; height:100%">
 <!--      <div id="nyancat"><img src="nyancat.gif" alt="nyancat" /></div>-->
     </div>
+
+    <div id="sidebar">
+      buttons!
+    </div>
   </body>
  
 </html>
