Updated to working ticker tape

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,11 @@
     <script src="../static/js/api.js"></script>
     <script src="../static/js/nyanmap.js"></script>
 
+    <link href="/static/css/news_nyan.css" type="text/css" rel="stylesheet"/>
+    <script src="/static/js/news_nyan.js"></script>
     
   </head>
+
   <body onload="initialize(40.728429,-73.995605)">
    <div id="top_bar">
      <img id="hacknyancat" src="../static/hacknyancat_logo.png" width="102" height="35"/>
