--- a/templates/index.html
+++ b/templates/index.html
@@ -26,17 +26,24 @@
      <a href="nyt/">Nyancat in the news!</a>
      <a href="static/longtail.html">Watch Nyancat with Longtail's JWPlayer</a>
    </div>
+
+
+   <div id="map_and_sidebar_div">
+
    <div id="nyancat">
       <img src="../static/nyancat.gif" alt="nyancat" width="100" height="70" />
     </div>
 
-    <div id="map_canvas" style="width:100%; height:100%">
+    <div id="map_canvas">
 <!--      <div id="nyancat"><img src="nyancat.gif" alt="nyancat" /></div>-->
     </div>
 
     <div id="sidebar">
-      buttons!
-    </div>
+   buttons
+   </div>
+
+   </div>
+
   </body>
  
 </html>
