--- a/static/nyanmap.css
+++ b/static/nyanmap.css
@@ -10,34 +10,40 @@ body
     padding: 0;
 }
 
+#map_and_sidebar_div{
+    height: 506px;
+    
+}
+
 #map_canvas
 {
-    height: 100%:
-    width: 100%;
     z-index: 1;
+    float: left;
+    width: 500px;
+    height: 500px;
+    border: 3px solid black;
 }
 
 
 #nyancat
 {
     position: absolute;
+    top: 315px;
+    left: 200px;
     z-index: 2;
-    left: 50%;
-    top: 50%;
-    bottom: 50%;
-    right: 50%;
-
 }
 
 #top_bar
 {
-    height: 35px;
+    width: 100%;
+    height: 100px;
 }
 
 
 #sidebar
 {
-    height: 100%;
-    align: right;
-    width: 50 px;
+    float:left
+    width: 25%;
+    background: blue;
+    height: 506px;
 }
