fuck it, put it in the iframes

--- a/templates/index.html
+++ b/templates/index.html
@@ -45,14 +45,14 @@
         </a>
       </div>
 
-      <div id="etsy-sidebar">
-      </div>
+      <iframe src="/etsy-results/">
+      </iframe>
 
-      <div id="dc-sidebar">
-      </div>
+      <iframe src="/dc-results">
+      </iframe>
 
-      <div id="longtail-sidebar">
-      </div>
+      <iframe src="/static/longtail.html">
+      </iframe>
     </div>
 
    </div>
