--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
         var AviaryJS = AviaryJS || {};
         AviaryJS.isLoggedIn = false;
 	</script>
-	<script src="js/aviary.js" type="text/javascript"></script>
+	<script src="/static/js/aviary.js" type="text/javascript"></script>
     
   </head>
 
