--- a/templates/index.html
+++ b/templates/index.html
@@ -62,7 +62,7 @@
       <iframe id="longtail-sidebar" src="/static/longtail.html">
       </iframe>
 
-      <iframe id="tumblr-sidebar" src="/tumblr-results">
+      <iframe id="tumblr-sidebar" src="http://web.mit.edu/~nouyang/Public/tempout.html">
       </iframe>
 	  
     </div>
